<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content">


    <RelativeLayout
        android:id="@+id/rel"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:scaleX="1.6"
            android:scaleY="1.3"
            android:src="@mipmap/background" />

    <ImageView
        android:id="@+id/imgmeek"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:padding="0dp"
        android:src="@mipmap/logo" />

    <TextView
        android:id="@+id/txttagline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/imgmeek"

        android:text="@string/tagline"
        android:textColor="@color/white"
        android:fontFamily="@font/opensans_regular"
        android:textSize="11sp" />




        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            app:layout_constraintEnd_toStartOf="@+id/txttagline"
            app:layout_constraintTop_toBottomOf="@+id/txttagline">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="30dp"
                android:text="@string/sign_up"
                android:fontFamily="@font/segoe_ui_gras"
                android:textColor="@color/purple"
                android:textSize="31sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:maxLines="3"
                android:layout_marginRight="40dp"
                android:text="@string/temp_text"         android:textColor="@color/grey"
                android:textSize="14sp"
                />

            <EditText
                android:id="@+id/edtemail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:hint="@string/email_address"
                android:padding="8dp"
                android:textSize="14sp"
                android:fontFamily="@font/segoe_ui"
                android:background="@drawable/background_edittext" />


                <EditText
                android:id="@+id/edtpassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:hint="@string/password"
                android:padding="8dp" android:fontFamily="@font/segoe_ui" android:textSize="14dp"
                android:background="@drawable/background_edittext" />

                <TextView
                    android:id="@+id/txtforgot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="40dp"
                    android:text="@string/forgot_your_password"
                    android:textSize="14sp"
                    android:fontFamily="@font/segoe_ui"
                    android:gravity="end"
                    android:textColor="@color/orange"
                    android:layout_marginTop="5dp"
                    />


                <Button
                    android:id="@+id/btnsignup"
                    android:layout_width="165dp"
                    android:layout_height="54dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/background_button"
                    android:fontFamily="@font/segoe_ui_semibold"
                    android:text="@string/sign_up_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:backgroundTint="@color/dark_purple" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_account"
                        android:textSize="14sp"
                        android:textColor="@color/grey"
                        android:layout_marginTop="5dp"
                        />

                    <TextView
                        android:id="@+id/txtsignin"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/segoe_ui_semibold"
                        android:text="@string/log_in_now"
                        android:textColor="@color/dark_purple"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>
    </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>