<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content">



    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:scaleX="1.6"
            android:scaleY="1.4"
            android:src="@mipmap/background" />



        <ImageView
            android:id="@+id/imgmeek"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:padding="0dp"
            android:src="@mipmap/logo" />

        <TextView
            android:id="@+id/txttagline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="30dp"
            android:text="@string/tagline"
            android:textColor="@color/white"
            android:layout_below="@+id/imgmeek"
            android:textSize="11sp"
            android:fontFamily="@font/opensans_regular" />




            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_marginTop="180dp"
                app:layout_constraintEnd_toStartOf="@+id/txttagline"
                app:layout_constraintTop_toBottomOf="@+id/txttagline">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="30dp"
                    android:text="@string/login"
                    android:fontFamily="@font/segoe_ui_gras"
                    android:textColor="@color/purple"
                    android:textSize="31sp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:maxLines="3"
                    android:layout_marginRight="40dp"
                    android:text="@string/temp_text"
                    android:textSize="14dp"
                    />

                <EditText
                    android:id="@+id/edtemail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp"
                    android:hint="@string/email_address"
                    android:padding="8dp"
                    android:fontFamily="@font/segoe_ui"
                    android:textSize="14dp"
                    android:background="@drawable/background_edittext" />


                <EditText
                    android:id="@+id/edtpassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:hint="@string/password"
                    android:padding="8dp"
                    android:fontFamily="@font/segoe_ui"
                    android:textSize="14dp"
                    android:background="@drawable/background_edittext" />

                <TextView
                    android:id="@+id/txtforgot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="40dp"
                    android:text="@string/forgot_your_password"
                    android:textSize="14dp"
                    android:gravity="end"
                    android:fontFamily="@font/segoe_ui"
                    android:textColor="@color/orange"
                    android:layout_marginTop="5dp"
                    />


                <Button
                    android:id="@+id/btnlogin"
                    android:layout_width="165dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/background_button"
                    android:text="@string/login_text"
                    android:fontFamily="@font/segoe_ui_semibold"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    app:backgroundTint="@color/dark_purple" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_user"
                        android:textSize="14dp"
                        android:textColor="@color/grey"
                        android:layout_marginTop="5dp"
                        />

                    <TextView
                        android:id="@+id/txtjoin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/segoe_ui_semibold"
                        android:text="@string/join_now"
                        android:textColor="@color/dark_purple"
                        android:textSize="14dp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="131dp"
                        android:layout_height="2dp"
                        android:layout_marginTop="20dp"
                        android:background="#c0c0c0"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Or"
                        android:textSize="14dp"
                        android:layout_margin="10dp"
                        android:textColor="@color/grey"
                        android:layout_marginTop="5dp"
                        />

                    <View
                        android:layout_width="131dp"
                        android:layout_height="2dp"
                        android:layout_marginTop="20dp"
                        android:background="#c0c0c0"/>



                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="80dp"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/imgfb"
                        android:layout_width="22dp"
                        android:layout_height="30dp"
                        android:adjustViewBounds="true"
                        android:src="@mipmap/fb" />

                    <ImageView
                        android:id="@+id/imggoogle"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:adjustViewBounds="true"
                        android:layout_marginLeft="20dp"
                        android:src="@mipmap/google"   />
                    <ImageView
                        android:id="@+id/imglinkedin"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:adjustViewBounds="true"

                        android:layout_marginLeft="20dp"
                        android:src="@mipmap/linkedin"   />
                </LinearLayout>

            </LinearLayout>
    </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>